k8s/non-helm/istio-auth-backup.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"datadog-mtls","namespace":"default"},"spec":{"mtls":{"mode":"PERMISSIVE"},"selector":{"matchLabels":{"app":"datadog-agent"}}}}
    creationTimestamp: "2025-02-20T10:08:04Z"
    generation: 1
    name: datadog-mtls
    namespace: default
    resourceVersion: "200327"
    uid: dee7847c-f559-4e70-99bf-655b90b74ccb
  spec:
    mtls:
      mode: PERMISSIVE
    selector:
      matchLabels:
        app: datadog-agent
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1beta1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"default","namespace":"default"},"spec":{"mtls":{"mode":"STRICT"}}}
    creationTimestamp: "2025-02-19T16:41:58Z"
    generation: 1
    name: default
    namespace: default
    resourceVersion: "167414"
    uid: 832e3d4f-5972-4415-a2cd-ea75d4845840
  spec:
    mtls:
      mode: STRICT
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
    creationTimestamp: "2025-02-16T17:03:14Z"
    generation: 1
    name: istio-ingressgateway
    namespace: istio-system
    resourceVersion: "62067"
    uid: a5ba2156-b92c-4670-9acb-dddb383c5eb1
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"service-a","namespace":"default"},"spec":{"gateways":["istio-system/istio-ingressgateway"],"hosts":["*"],"http":[{"match":[{"uri":{"prefix":"/products"}}],"route":[{"destination":{"host":"service-a.default.svc.cluster.local","port":{"number":8082}}}]}]}}
    creationTimestamp: "2025-02-16T16:15:22Z"
    generation: 2
    name: service-a
    namespace: default
    resourceVersion: "60655"
    uid: e340cf58-b337-43d1-b8a4-792c196fefc7
  spec:
    gateways:
    - istio-system/istio-ingressgateway
    hosts:
    - '*'
    http:
    - match:
      - uri:
          prefix: /products
      route:
      - destination:
          host: service-a.default.svc.cluster.local
          port:
            number: 8082
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"service-b","namespace":"default"},"spec":{"hosts":["service-b.default.svc.cluster.local"],"http":[{"match":[{"uri":{"prefix":"/products"}}],"route":[{"destination":{"host":"service-b.default.svc.cluster.local","port":{"number":8081}}}]}]}}
    creationTimestamp: "2025-02-16T16:15:22Z"
    generation: 1
    name: service-b
    namespace: default
    resourceVersion: "58235"
    uid: a0b4166e-5e33-4a12-8743-18a13e564c26
  spec:
    hosts:
    - service-b.default.svc.cluster.local
    http:
    - match:
      - uri:
          prefix: /products
      route:
      - destination:
          host: service-b.default.svc.cluster.local
          port:
            number: 8081
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"service-c","namespace":"default"},"spec":{"hosts":["service-c.default.svc.cluster.local"],"http":[{"match":[{"uri":{"prefix":"/products"}}],"route":[{"destination":{"host":"service-c.default.svc.cluster.local","port":{"number":8083}}}]}]}}
    creationTimestamp: "2025-02-16T16:15:22Z"
    generation: 1
    name: service-c
    namespace: default
    resourceVersion: "58237"
    uid: 1bc0c63a-d0ad-4692-b686-904ae8fba935
  spec:
    hosts:
    - service-c.default.svc.cluster.local
    http:
    - match:
      - uri:
          prefix: /products
      route:
      - destination:
          host: service-c.default.svc.cluster.local
          port:
            number: 8083
kind: List
metadata:
  resourceVersion: ""
